added styles and working on blog user render

--- a/src/style/navbar.scss
+++ b/src/style/navbar.scss
@@ -9,6 +9,7 @@
 .navbar-item {
     text-decoration: none;
     color: whitesmoke;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .navbar-item:hover {
