--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -26,4 +26,6 @@ HTML, body {
 @import "./navbar.scss";
 @import "./carousel.scss";
 @import "./header.scss";
+@import "./blog-pic.scss";
 @import "./form-container.scss";
+@import "./form-image-wrapper.scss";
