--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -28,4 +28,5 @@ HTML, body {
 @import "./header.scss";
 @import "./blog-pic.scss";
 @import "./form-container.scss";
+@import "./post-container.scss";
 @import "./form-image-wrapper.scss";
